[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/terrain/BreadZoneTiles.res" type="PackedScene" id=1]
[ext_resource path="res://assets/backgrounds/layer2 400x300.png" type="Texture" id=2]
[ext_resource path="res://scenes/obstacles/lethal/Spikes.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/bread zone/Bread - Basic.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/backgrounds/layer0 400x300.png" type="Texture" id=5]
[ext_resource path="res://assets/backgrounds/layer1 400x300.png" type="Texture" id=6]
[ext_resource path="res://assets/backgrounds/layer3 400x300.png" type="Texture" id=7]
[ext_resource path="res://scenes/characters/Pitstop Pete.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemies/bread zone/Toast.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemies/bread zone/Toaster.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/levels/LevelProgressor.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/levels/bread zone/BreadZoneLevel4.gd" type="Script" id=12]
[ext_resource path="res://scenes/obstacles/interactables/Avoblock.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/obstacles/interactables/Button.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/gameplay/Touch.tscn" type="PackedScene" id=15]

[node name="BreadZoneLevel4" type="Node2D"]
script = ExtResource( 12 )

[node name="Touch" parent="." instance=ExtResource( 15 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.713726, 0.643137, 0.580392, 1 )

[node name="BreadZoneTiles" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -196609, 0, 65537, -262144, 0, 65538, -262143, 0, 65538, -262142, 0, 65538, -262141, 0, 65538, -262140, 0, 65538, -262139, 0, 65538, -262138, 0, 65538, -262137, 0, 65538, -262136, 0, 65538, -262135, 0, 65538, -262134, 0, 65538, -262133, 0, 65538, -262132, 0, 65538, -262131, 0, 65538, -262130, 0, 65538, -262129, 0, 65538, -262128, 0, 65538, -262127, 0, 65538, -262126, 0, 65538, -262125, 0, 65538, -262124, 0, 65538, -262123, 0, 65538, -262122, 0, 65538, -262121, 0, 65538, -262120, 0, 65538, -262119, 0, 65538, -262118, 0, 65538, -262117, 0, 65538, -262116, 0, 65538, -262115, 0, 65538, -262114, 0, 65538, -262113, 0, 65538, -262112, 0, 65538, -262111, 0, 65538, -262110, 0, 65538, -262109, 0, 65538, -262108, 0, 65538, -262107, 0, 65538, -262106, 0, 65538, -262105, 0, 65538, -262104, 0, 65538, -262103, 0, 65538, -262102, 0, 65538, -262101, 0, 65538, -262100, 0, 65538, -262099, 0, 65538, -262098, 0, 65538, -262097, 0, 65538, -262096, 0, 65538, -262095, 0, 65538, -262094, 0, 65538, -262093, 0, 65538, -262092, 0, 65538, -262091, 0, 65538, -262090, 0, 65538, -262089, 0, 65538, -262088, 0, 65538, -262087, 0, 65538, -262086, 0, 65538, -262085, 0, 65538, -262084, 0, 65538, -262083, 0, 65538, -262082, 0, 65538, -262081, 0, 65538, -262080, 0, 65538, -262079, 0, 65538, -262078, 0, 65538, -262077, 0, 65538, -262076, 0, 65538, -262075, 0, 65538, -262074, 0, 65538, -262073, 0, 65538, -262072, 0, 65538, -262071, 0, 65538, -262070, 0, 65538, -262069, 0, 65538, -262068, 0, 65538, -262067, 0, 65538, -262066, 0, 65538, -262065, 0, 65538, -262064, 0, 65538, -262063, 0, 65539, -131073, 0, 131073, -196608, 0, 131074, -196607, 0, 131074, -196606, 0, 131074, -196605, 0, 131074, -196604, 0, 131074, -196603, 0, 131074, -196602, 0, 131074, -196601, 0, 131074, -196600, 0, 131074, -196599, 0, 131074, -196598, 0, 131074, -196597, 0, 131074, -196596, 0, 131074, -196595, 0, 131074, -196594, 0, 131074, -196593, 0, 131074, -196592, 0, 131074, -196591, 0, 131074, -196590, 0, 131074, -196589, 0, 131074, -196588, 0, 131074, -196587, 0, 131074, -196586, 0, 131074, -196585, 0, 131074, -196584, 0, 131074, -196583, 0, 131074, -196582, 0, 131074, -196581, 0, 131074, -196580, 0, 131074, -196579, 0, 131074, -196578, 0, 131074, -196577, 0, 131074, -196576, 0, 131074, -196575, 0, 131074, -196574, 0, 131074, -196573, 0, 131074, -196572, 0, 131074, -196571, 0, 131074, -196570, 0, 131074, -196569, 0, 131074, -196568, 0, 131074, -196567, 0, 131074, -196566, 0, 131074, -196565, 0, 131074, -196564, 0, 131074, -196563, 0, 131074, -196562, 0, 131074, -196561, 0, 131074, -196560, 0, 131074, -196559, 0, 131074, -196558, 0, 131074, -196557, 0, 131074, -196556, 0, 131074, -196555, 0, 131074, -196554, 0, 131074, -196553, 0, 131074, -196552, 0, 131074, -196551, 0, 131074, -196550, 0, 131074, -196549, 0, 131074, -196548, 0, 131074, -196547, 0, 131074, -196546, 0, 131074, -196545, 0, 131074, -196544, 0, 131074, -196543, 0, 131074, -196542, 0, 131074, -196541, 0, 131074, -196540, 0, 131074, -196539, 0, 131074, -196538, 0, 131074, -196537, 0, 131074, -196536, 0, 131074, -196535, 0, 131074, -196534, 0, 131074, -196533, 0, 131074, -196532, 0, 131074, -196531, 0, 131074, -196530, 0, 131074, -196529, 0, 131074, -196528, 0, 131074, -196527, 0, 131075, -65537, 0, 131073, -131072, 0, 131074, -131071, 0, 4, -131070, 0, 196610, -131069, 0, 196610, -131068, 0, 196610, -131067, 0, 196610, -131066, 0, 196610, -131065, 0, 196610, -131064, 0, 196610, -131063, 0, 196610, -131062, 0, 196610, -131061, 0, 196610, -131060, 0, 196610, -131059, 0, 196610, -131058, 0, 196610, -131057, 0, 196610, -131056, 0, 196610, -131055, 0, 196610, -131054, 0, 196610, -131053, 0, 196610, -131052, 0, 196610, -131051, 0, 196610, -131050, 0, 196610, -131049, 0, 196610, -131048, 0, 196610, -131047, 0, 196610, -131046, 0, 196610, -131045, 0, 196610, -131044, 0, 196610, -131043, 0, 196610, -131042, 0, 196610, -131041, 0, 196610, -131040, 0, 196610, -131039, 0, 196610, -131038, 0, 196610, -131037, 0, 196610, -131036, 0, 196610, -131035, 0, 196610, -131034, 0, 196610, -131033, 0, 196610, -131032, 0, 196610, -131031, 0, 196610, -131030, 0, 196610, -131029, 0, 196610, -131028, 0, 196610, -131027, 0, 196610, -131026, 0, 196610, -131025, 0, 196610, -131024, 0, 196610, -131023, 0, 196610, -131022, 0, 196610, -131021, 0, 196610, -131020, 0, 196610, -131019, 0, 196610, -131018, 0, 196610, -131017, 0, 196610, -131016, 0, 196610, -131015, 0, 196610, -131014, 0, 196610, -131013, 0, 196610, -131012, 0, 196610, -131011, 0, 196610, -131010, 0, 196610, -131009, 0, 196610, -131008, 0, 196610, -131007, 0, 196610, -131006, 0, 5, -131005, 0, 131074, -131004, 0, 131074, -131003, 0, 131074, -131002, 0, 131074, -131001, 0, 131074, -131000, 0, 131074, -130999, 0, 131074, -130998, 0, 131074, -130997, 0, 131074, -130996, 0, 131074, -130995, 0, 131074, -130994, 0, 131074, -130993, 0, 131074, -130992, 0, 131074, -130991, 0, 131075, -1, 0, 131073, -65536, 0, 131074, -65535, 0, 131075, -65470, 0, 131073, -65469, 0, 131074, -65468, 0, 131074, -65467, 0, 131074, -65466, 0, 131074, -65465, 0, 131074, -65464, 0, 131074, -65463, 0, 131074, -65462, 0, 131074, -65461, 0, 131074, -65460, 0, 131074, -65459, 0, 131074, -65458, 0, 131074, -65457, 0, 131074, -65456, 0, 131074, -65455, 0, 131075, 65535, 0, 131073, 0, 0, 131074, 1, 0, 131075, 66, 0, 131073, 67, 0, 131074, 68, 0, 131074, 69, 0, 131074, 70, 0, 131074, 71, 0, 131074, 72, 0, 131074, 73, 0, 131074, 74, 0, 131074, 75, 0, 131074, 76, 0, 131074, 77, 0, 131074, 78, 0, 131074, 79, 0, 131074, 80, 0, 131074, 81, 0, 131075, 131071, 0, 131073, 65536, 0, 131074, 65537, 0, 131075, 65602, 0, 131073, 65603, 0, 131074, 65604, 0, 131074, 65605, 0, 131074, 65606, 0, 131074, 65607, 0, 131074, 65608, 0, 131074, 65609, 0, 131074, 65610, 0, 131074, 65611, 0, 131074, 65612, 0, 131074, 65613, 0, 131074, 65614, 0, 131074, 65615, 0, 131074, 65616, 0, 131074, 65617, 0, 131075, 196607, 0, 131073, 131072, 0, 131074, 131073, 0, 131075, 131138, 0, 131073, 131139, 0, 131074, 131140, 0, 131074, 131141, 0, 131074, 131142, 0, 131074, 131143, 0, 131074, 131144, 0, 131074, 131145, 0, 131074, 131146, 0, 131074, 131147, 0, 131074, 131148, 0, 131074, 131149, 0, 131074, 131150, 0, 131074, 131151, 0, 131074, 131152, 0, 131074, 131153, 0, 131075, 262143, 0, 131073, 196608, 0, 131074, 196609, 0, 131075, 196674, 0, 131073, 196675, 0, 131074, 196676, 0, 131074, 196677, 0, 4, 196678, 0, 196610, 196679, 0, 196610, 196680, 0, 196610, 196681, 0, 196610, 196682, 0, 5, 196683, 0, 131074, 196684, 0, 131074, 196685, 0, 131074, 196686, 0, 131074, 196687, 0, 131074, 196688, 0, 131074, 196689, 0, 131075, 327679, 0, 131073, 262144, 0, 131074, 262145, 0, 131075, 262210, 0, 131073, 262211, 0, 131074, 262212, 0, 131074, 262213, 0, 131075, 262218, 0, 131073, 262219, 0, 131074, 262220, 0, 131074, 262221, 0, 131074, 262222, 0, 131074, 262223, 0, 131074, 262224, 0, 131074, 262225, 0, 131075, 393215, 0, 131073, 327680, 0, 131074, 327681, 0, 131075, 327746, 0, 131073, 327747, 0, 131074, 327748, 0, 131074, 327749, 0, 131075, 327754, 0, 196609, 327755, 0, 196610, 327756, 0, 196610, 327757, 0, 196610, 327758, 0, 196610, 327759, 0, 196610, 327760, 0, 5, 327761, 0, 131075, 458751, 0, 131073, 393216, 0, 131074, 393217, 0, 131075, 393282, 0, 131073, 393283, 0, 131074, 393284, 0, 131074, 393285, 0, 131075, 393296, 0, 131073, 393297, 0, 131075, 524287, 0, 131073, 458752, 0, 131074, 458753, 0, 131075, 458818, 0, 131073, 458819, 0, 131074, 458820, 0, 131074, 458821, 0, 131075, 458832, 0, 131073, 458833, 0, 131075, 589823, 0, 131073, 524288, 0, 131074, 524289, 0, 131075, 524354, 0, 196609, 524355, 0, 196610, 524356, 0, 196610, 524357, 0, 196611, 524362, 0, 65537, 524363, 0, 65538, 524364, 0, 65538, 524365, 0, 65538, 524366, 0, 65538, 524367, 0, 65538, 524368, 0, 65541, 524369, 0, 131075, 655359, 0, 131073, 589824, 0, 131074, 589825, 0, 131075, 589853, 0, 0, 589857, 0, 0, 589866, 0, 0, 589869, 0, 1, 589870, 0, 3, 589873, 0, 0, 589898, 0, 131073, 589899, 0, 131074, 589900, 0, 131074, 589901, 0, 131074, 589902, 0, 131074, 589903, 0, 131074, 589904, 0, 131074, 589905, 0, 131075, 720895, 0, 131073, 655360, 0, 131074, 655361, 0, 131075, 655434, 0, 131073, 655435, 0, 131074, 655436, 0, 131074, 655437, 0, 131074, 655438, 0, 131074, 655439, 0, 131074, 655440, 0, 131074, 655441, 0, 131075, 786431, 0, 131073, 720896, 0, 131074, 720897, 0, 65540, 720898, 0, 65538, 720899, 0, 65538, 720900, 0, 65538, 720901, 0, 65538, 720902, 0, 65538, 720903, 0, 65538, 720904, 0, 65538, 720905, 0, 65538, 720906, 0, 65538, 720907, 0, 65538, 720908, 0, 65538, 720909, 0, 65538, 720910, 0, 65538, 720911, 0, 65539, 720916, 0, 65537, 720917, 0, 65538, 720918, 0, 65538, 720919, 0, 65538, 720920, 0, 65538, 720921, 0, 65539, 720933, 0, 65537, 720934, 0, 65538, 720935, 0, 65538, 720936, 0, 65539, 720947, 0, 65537, 720948, 0, 65538, 720949, 0, 65538, 720950, 0, 65538, 720951, 0, 65538, 720952, 0, 65538, 720953, 0, 65538, 720954, 0, 65538, 720955, 0, 65538, 720956, 0, 65538, 720957, 0, 65538, 720958, 0, 65538, 720959, 0, 65538, 720960, 0, 65538, 720961, 0, 65538, 720962, 0, 65538, 720963, 0, 65538, 720964, 0, 65538, 720965, 0, 65539, 720970, 0, 131073, 720971, 0, 131074, 720972, 0, 131074, 720973, 0, 131074, 720974, 0, 131074, 720975, 0, 131074, 720976, 0, 131074, 720977, 0, 131075, 851967, 0, 131073, 786432, 0, 131074, 786433, 0, 131074, 786434, 0, 131074, 786435, 0, 131074, 786436, 0, 131074, 786437, 0, 131074, 786438, 0, 131074, 786439, 0, 131074, 786440, 0, 131074, 786441, 0, 131074, 786442, 0, 131074, 786443, 0, 131074, 786444, 0, 131074, 786445, 0, 131074, 786446, 0, 131074, 786447, 0, 131075, 786452, 0, 131073, 786453, 0, 131074, 786454, 0, 131074, 786455, 0, 131074, 786456, 0, 131074, 786457, 0, 131075, 786469, 0, 131073, 786470, 0, 131074, 786471, 0, 131074, 786472, 0, 65540, 786473, 0, 65538, 786474, 0, 65538, 786475, 0, 65538, 786476, 0, 65538, 786477, 0, 65538, 786478, 0, 65538, 786479, 0, 65538, 786480, 0, 65538, 786481, 0, 65538, 786482, 0, 65538, 786483, 0, 65541, 786484, 0, 131074, 786485, 0, 131074, 786486, 0, 131074, 786487, 0, 131074, 786488, 0, 131074, 786489, 0, 131074, 786490, 0, 131074, 786491, 0, 131074, 786492, 0, 131074, 786493, 0, 131074, 786494, 0, 131074, 786495, 0, 131074, 786496, 0, 131074, 786497, 0, 131074, 786498, 0, 131074, 786499, 0, 131074, 786500, 0, 131074, 786501, 0, 65540, 786502, 0, 65538, 786503, 0, 65538, 786504, 0, 65538, 786505, 0, 65538, 786506, 0, 65541, 786507, 0, 131074, 786508, 0, 131074, 786509, 0, 131074, 786510, 0, 131074, 786511, 0, 131074, 786512, 0, 131074, 786513, 0, 131075, 917503, 0, 131073, 851968, 0, 131074, 851969, 0, 131074, 851970, 0, 131074, 851971, 0, 131074, 851972, 0, 131074, 851973, 0, 131074, 851974, 0, 131074, 851975, 0, 131074, 851976, 0, 131074, 851977, 0, 131074, 851978, 0, 131074, 851979, 0, 131074, 851980, 0, 131074, 851981, 0, 131074, 851982, 0, 131074, 851983, 0, 65540, 851984, 0, 65538, 851985, 0, 65538, 851986, 0, 65538, 851987, 0, 65538, 851988, 0, 65541, 851989, 0, 131074, 851990, 0, 131074, 851991, 0, 131074, 851992, 0, 131074, 851993, 0, 65540, 851994, 0, 65538, 851995, 0, 65538, 851996, 0, 65538, 851997, 0, 65538, 851998, 0, 65538, 851999, 0, 65538, 852000, 0, 65538, 852001, 0, 65538, 852002, 0, 65538, 852003, 0, 65538, 852004, 0, 65538, 852005, 0, 65541, 852006, 0, 131074, 852007, 0, 131074, 852008, 0, 131074, 852009, 0, 131074, 852010, 0, 131074, 852011, 0, 131074, 852012, 0, 131074, 852013, 0, 131074, 852014, 0, 131074, 852015, 0, 131074, 852016, 0, 131074, 852017, 0, 131074, 852018, 0, 131074, 852019, 0, 131074, 852020, 0, 131074, 852021, 0, 131074, 852022, 0, 131074, 852023, 0, 131074, 852024, 0, 131074, 852025, 0, 131074, 852026, 0, 131074, 852027, 0, 131074, 852028, 0, 131074, 852029, 0, 131074, 852030, 0, 131074, 852031, 0, 131074, 852032, 0, 131074, 852033, 0, 131074, 852034, 0, 131074, 852035, 0, 131074, 852036, 0, 131074, 852037, 0, 131074, 852038, 0, 131074, 852039, 0, 131074, 852040, 0, 131074, 852041, 0, 131074, 852042, 0, 131074, 852043, 0, 131074, 852044, 0, 131074, 852045, 0, 131074, 852046, 0, 131074, 852047, 0, 131074, 852048, 0, 131074, 852049, 0, 131075, 983039, 0, 131073, 917504, 0, 131074, 917505, 0, 131074, 917506, 0, 131074, 917507, 0, 131074, 917508, 0, 131074, 917509, 0, 131074, 917510, 0, 131074, 917511, 0, 131074, 917512, 0, 131074, 917513, 0, 131074, 917514, 0, 131074, 917515, 0, 131074, 917516, 0, 131074, 917517, 0, 131074, 917518, 0, 131074, 917519, 0, 131074, 917520, 0, 131074, 917521, 0, 131074, 917522, 0, 131074, 917523, 0, 131074, 917524, 0, 131074, 917525, 0, 131074, 917526, 0, 131074, 917527, 0, 131074, 917528, 0, 131074, 917529, 0, 131074, 917530, 0, 131074, 917531, 0, 131074, 917532, 0, 131074, 917533, 0, 131074, 917534, 0, 131074, 917535, 0, 131074, 917536, 0, 131074, 917537, 0, 131074, 917538, 0, 131074, 917539, 0, 131074, 917540, 0, 131074, 917541, 0, 131074, 917542, 0, 131074, 917543, 0, 131074, 917544, 0, 131074, 917545, 0, 131074, 917546, 0, 131074, 917547, 0, 131074, 917548, 0, 131074, 917549, 0, 131074, 917550, 0, 131074, 917551, 0, 131074, 917552, 0, 131074, 917553, 0, 131074, 917554, 0, 131074, 917555, 0, 131074, 917556, 0, 131074, 917557, 0, 131074, 917558, 0, 131074, 917559, 0, 131074, 917560, 0, 131074, 917561, 0, 131074, 917562, 0, 131074, 917563, 0, 131074, 917564, 0, 131074, 917565, 0, 131074, 917566, 0, 131074, 917567, 0, 131074, 917568, 0, 131074, 917569, 0, 131074, 917570, 0, 131074, 917571, 0, 131074, 917572, 0, 131074, 917573, 0, 131074, 917574, 0, 131074, 917575, 0, 131074, 917576, 0, 131074, 917577, 0, 131074, 917578, 0, 131074, 917579, 0, 131074, 917580, 0, 131074, 917581, 0, 131074, 917582, 0, 131074, 917583, 0, 131074, 917584, 0, 131074, 917585, 0, 131075, 1048575, 0, 131073, 983040, 0, 131074, 983041, 0, 131074, 983042, 0, 131074, 983043, 0, 131074, 983044, 0, 131074, 983045, 0, 131074, 983046, 0, 131074, 983047, 0, 131074, 983048, 0, 131074, 983049, 0, 131074, 983050, 0, 131074, 983051, 0, 131074, 983052, 0, 131074, 983053, 0, 131074, 983054, 0, 131074, 983055, 0, 131074, 983056, 0, 131074, 983057, 0, 131074, 983058, 0, 131074, 983059, 0, 131074, 983060, 0, 131074, 983061, 0, 131074, 983062, 0, 131074, 983063, 0, 131074, 983064, 0, 131074, 983065, 0, 131074, 983066, 0, 131074, 983067, 0, 131074, 983068, 0, 131074, 983069, 0, 131074, 983070, 0, 131074, 983071, 0, 131074, 983072, 0, 131074, 983073, 0, 131074, 983074, 0, 131074, 983075, 0, 131074, 983076, 0, 131074, 983077, 0, 131074, 983078, 0, 131074, 983079, 0, 131074, 983080, 0, 131074, 983081, 0, 131074, 983082, 0, 131074, 983083, 0, 131074, 983084, 0, 131074, 983085, 0, 131074, 983086, 0, 131074, 983087, 0, 131074, 983088, 0, 131074, 983089, 0, 131074, 983090, 0, 131074, 983091, 0, 131074, 983092, 0, 131074, 983093, 0, 131074, 983094, 0, 131074, 983095, 0, 131074, 983096, 0, 131074, 983097, 0, 131074, 983098, 0, 131074, 983099, 0, 131074, 983100, 0, 131074, 983101, 0, 131074, 983102, 0, 131074, 983103, 0, 131074, 983104, 0, 131074, 983105, 0, 131074, 983106, 0, 131074, 983107, 0, 131074, 983108, 0, 131074, 983109, 0, 131074, 983110, 0, 131074, 983111, 0, 131074, 983112, 0, 131074, 983113, 0, 131074, 983114, 0, 131074, 983115, 0, 131074, 983116, 0, 131074, 983117, 0, 131074, 983118, 0, 131074, 983119, 0, 131074, 983120, 0, 131074, 983121, 0, 131075, 1114111, 0, 196609, 1048576, 0, 196610, 1048577, 0, 196610, 1048578, 0, 196610, 1048579, 0, 196610, 1048580, 0, 196610, 1048581, 0, 196610, 1048582, 0, 196610, 1048583, 0, 196610, 1048584, 0, 196610, 1048585, 0, 196610, 1048586, 0, 196610, 1048587, 0, 196610, 1048588, 0, 196610, 1048589, 0, 196610, 1048590, 0, 196610, 1048591, 0, 196610, 1048592, 0, 196610, 1048593, 0, 196610, 1048594, 0, 196610, 1048595, 0, 196610, 1048596, 0, 196610, 1048597, 0, 196610, 1048598, 0, 196610, 1048599, 0, 196610, 1048600, 0, 196610, 1048601, 0, 196610, 1048602, 0, 196610, 1048603, 0, 196610, 1048604, 0, 196610, 1048605, 0, 196610, 1048606, 0, 196610, 1048607, 0, 196610, 1048608, 0, 196610, 1048609, 0, 196610, 1048610, 0, 196610, 1048611, 0, 196610, 1048612, 0, 196610, 1048613, 0, 196610, 1048614, 0, 196610, 1048615, 0, 196610, 1048616, 0, 196610, 1048617, 0, 196610, 1048618, 0, 196610, 1048619, 0, 196610, 1048620, 0, 196610, 1048621, 0, 196610, 1048622, 0, 196610, 1048623, 0, 196610, 1048624, 0, 196610, 1048625, 0, 196610, 1048626, 0, 196610, 1048627, 0, 196610, 1048628, 0, 196610, 1048629, 0, 196610, 1048630, 0, 196610, 1048631, 0, 196610, 1048632, 0, 196610, 1048633, 0, 196610, 1048634, 0, 196610, 1048635, 0, 196610, 1048636, 0, 196610, 1048637, 0, 196610, 1048638, 0, 196610, 1048639, 0, 196610, 1048640, 0, 196610, 1048641, 0, 196610, 1048642, 0, 196610, 1048643, 0, 196610, 1048644, 0, 196610, 1048645, 0, 196610, 1048646, 0, 196610, 1048647, 0, 196610, 1048648, 0, 196610, 1048649, 0, 196610, 1048650, 0, 196610, 1048651, 0, 196610, 1048652, 0, 196610, 1048653, 0, 196610, 1048654, 0, 196610, 1048655, 0, 196610, 1048656, 0, 196610, 1048657, 0, 196611 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="Clouds" type="ParallaxBackground" parent="Background"]
scroll_ignore_camera_zoom = true

[node name="CanvasModulate" type="CanvasModulate" parent="Background/Clouds"]
color = Color( 0.713726, 0.643137, 0.580392, 1 )

[node name="Layer0" type="ParallaxLayer" parent="Background/Clouds"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="Background/Clouds/Layer0"]
position = Vector2( 0, -30 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 300 )

[node name="Layer1" type="ParallaxLayer" parent="Background/Clouds"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="Background/Clouds/Layer1"]
position = Vector2( 0, -30 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 300 )

[node name="Layer2" type="ParallaxLayer" parent="Background/Clouds"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="Background/Clouds/Layer2"]
position = Vector2( 0, -30 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 300 )

[node name="Layer3" type="ParallaxLayer" parent="Background/Clouds"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="Background/Clouds/Layer3"]
position = Vector2( 0, -30 )
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 0, 0, 400, 300 )

[node name="Button" parent="." instance=ExtResource( 14 )]
position = Vector2( 984, 168 )

[node name="Button2" parent="." instance=ExtResource( 14 )]
position = Vector2( 920, 168 )

[node name="Spikes" parent="." instance=ExtResource( 3 )]
position = Vector2( 264, 204 )

[node name="Spikes2" parent="." instance=ExtResource( 3 )]
position = Vector2( 280, 204 )

[node name="Spikes3" parent="." instance=ExtResource( 3 )]
position = Vector2( 296, 204 )

[node name="Spikes4" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 204 )

[node name="Spikes22" parent="." instance=ExtResource( 3 )]
position = Vector2( 1128, 188 )

[node name="Spikes23" parent="." instance=ExtResource( 3 )]
position = Vector2( 1144, 188 )

[node name="Spikes24" parent="." instance=ExtResource( 3 )]
position = Vector2( 1160, 188 )

[node name="Spikes25" parent="." instance=ExtResource( 3 )]
position = Vector2( 1176, 188 )

[node name="Spikes5" parent="." instance=ExtResource( 3 )]
position = Vector2( 424, 204 )

[node name="Spikes6" parent="." instance=ExtResource( 3 )]
position = Vector2( 440, 204 )

[node name="Spikes7" parent="." instance=ExtResource( 3 )]
position = Vector2( 456, 204 )

[node name="Spikes8" parent="." instance=ExtResource( 3 )]
position = Vector2( 472, 204 )

[node name="Spikes9" parent="." instance=ExtResource( 3 )]
position = Vector2( 488, 204 )

[node name="Spikes10" parent="." instance=ExtResource( 3 )]
position = Vector2( 504, 204 )

[node name="Spikes11" parent="." instance=ExtResource( 3 )]
position = Vector2( 520, 204 )

[node name="Spikes12" parent="." instance=ExtResource( 3 )]
position = Vector2( 536, 204 )

[node name="Spikes13" parent="." instance=ExtResource( 3 )]
position = Vector2( 552, 204 )

[node name="Spikes14" parent="." instance=ExtResource( 3 )]
position = Vector2( 568, 204 )

[node name="Spikes15" parent="." instance=ExtResource( 3 )]
position = Vector2( 584, 204 )

[node name="Spikes20" parent="." instance=ExtResource( 3 )]
position = Vector2( 791, 188 )

[node name="Spikes21" parent="." instance=ExtResource( 3 )]
position = Vector2( 807, 188 )

[node name="Spikes18" parent="." instance=ExtResource( 3 )]
position = Vector2( 728, 188 )

[node name="Spikes19" parent="." instance=ExtResource( 3 )]
position = Vector2( 744, 188 )

[node name="Spikes16" parent="." instance=ExtResource( 3 )]
position = Vector2( 665, 188 )

[node name="Spikes17" parent="." instance=ExtResource( 3 )]
position = Vector2( 681, 188 )

[node name="BreadBasic" parent="." instance=ExtResource( 4 )]
position = Vector2( 393, 169 )

[node name="Toast" parent="." instance=ExtResource( 9 )]
position = Vector2( 704, 177 )

[node name="Toaster" parent="." instance=ExtResource( 10 )]
position = Vector2( 704, 177 )

[node name="Toast2" parent="." instance=ExtResource( 9 )]
position = Vector2( 768, 177 )

[node name="Toaster2" parent="." instance=ExtResource( 10 )]
position = Vector2( 768, 177 )

[node name="PitstopPete" parent="." instance=ExtResource( 8 )]
position = Vector2( 145, 159 )

[node name="Avoblock" parent="." instance=ExtResource( 13 )]
position = Vector2( 1064, 152 )

[node name="Avoblock2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1064, 168 )

[node name="Avoblock3" parent="." instance=ExtResource( 13 )]
position = Vector2( 1080, 152 )

[node name="Avoblock4" parent="." instance=ExtResource( 13 )]
position = Vector2( 1080, 168 )

[node name="Avoblock5" parent="." instance=ExtResource( 13 )]
position = Vector2( 1096, 152 )

[node name="Avoblock6" parent="." instance=ExtResource( 13 )]
position = Vector2( 1096, 168 )

[node name="Avoblock7" parent="." instance=ExtResource( 13 )]
position = Vector2( 1112, 152 )

[node name="Avoblock8" parent="." instance=ExtResource( 13 )]
position = Vector2( 1112, 168 )

[node name="LevelProgressor" parent="." instance=ExtResource( 11 )]
position = Vector2( 1258, 116 )

[connection signal="not_pressed" from="Button" to="." method="_on_Button_not_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="not_pressed" from="Button2" to="." method="_on_Button2_not_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pit_spawn" from="PitstopPete" to="." method="_on_PitstopPete_pit_spawn"]
[connection signal="body_entered" from="LevelProgressor" to="." method="_on_LevelProgressor_body_entered"]
